# URL-shortener

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/services/bot/: Dockerfile
docker/services/django/: Dockerfile
docker/services/nginx/: Dockerfile
docker/services/nginx/conf.d/: nginx.conf
docker/shared/django/: .gitignore
src/backend/: .gitignore  entrypoint.sh
src/backend/bot/management/commands/: start_bot.py
src/backend/common/utils/: chunk_parsing.py  extract_url_from_cell.py
src/backend/core/: settings.py  urls.py
src/backend/fixtures/: Link.json
src/backend/shortener/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/backend/shortener/management/commands/:  link_import_from_liyru.py
src/backend/shortener/templates/: bulk_create_template.html  export_template.html
src/backend/shortener/tests/: tests_bulk_creating.py  tests_export_links_view.py
