[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolienas",email = "nicholienass@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django = "^5.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
